--- a/src/components/Field/General/General.less
+++ b/src/components/Field/General/General.less
@@ -1,4 +1,8 @@
-.General {
+.General,
+.Skills,
+.Other,
+.Estimates,
+.Contact {
   line-height: 1.8;
   font-size: 26px;
   &__Content {
@@ -12,5 +16,27 @@
   }
   p {
     line-height: 1.3;
+  }
+}
+@media only screen and (max-width: 1040px) {
+  .General,
+  .Skills,
+  .Other,
+  .Estimates,
+  .Contact {
+    width: 90vw;
+    margin: 10px 5vw;
+    word-break: break-word;
+  }
+}
+@media only screen and (max-width: 799px) {
+  .General,
+  .Skills,
+  .Other,
+  .Estimates,
+  .Contact {
+    width: 90vw;
+    margin: 15px;
+    word-break: break-word;
   }
 }
