--- a/src/components/Field/Header/Header.less
+++ b/src/components/Field/Header/Header.less
@@ -1,38 +1,35 @@
 .Head {
   width: 100vw;
   background: linear-gradient(#dad6d6, #ebebf3);
+  z-index: 4;
 }
 .Header {
   display: flex;
   margin: 0 auto;
-  height: 100px;
   width: 1000px;
   color: rgb(0, 0, 0);
-  &__Logo,
   &__Menu {
     margin: auto;
   }
-  &__Logo,
   &__Name {
-    color: black;
-    width: 220px;
+    width: 300px;
     text-align: center;
-    font-size: 19px;
+    font-size: 20px;
     cursor: pointer;
-  }
-  &__Name {
     background-color: rgba(2, 2, 2, 0.8);
     color: rgb(255, 255, 255);
-    height: 100px;
+    height: 80px;
     padding-top: 25px;
-    &:hover {
-      color: rgb(211, 198, 198);
+    text-decoration: none;
+    &:hover,
+    &--active {
+      color: rgb(199, 178, 178);
     }
   }
   &__Menu {
     display: grid;
     margin: auto 30px;
-    width: 560px;
+    width: 700px;
     grid-template:
       "one two three four" auto /
       auto auto auto auto;
@@ -59,6 +56,48 @@
     &--active {
       font-weight: 600;
       text-decoration: underline;
+    }
+  }
+}
+@media only screen and (max-width: 920px) {
+  .Header {
+    margin: 0 auto;
+    &__Name {
+      width: 240px;
+      height: 100px;
+      padding-top: 35px;
+    }
+    &__Menu {
+      display: grid;
+      margin: auto auto auto 5vw;
+      padding-top: 20px;
+      width: 400px;
+      grid-template:
+        "one two" 50px
+        "three four" 50px /
+        auto auto;
+    }
+  }
+}
+@media only screen and (max-width: 600px) {
+  .Header {
+    &__Name {
+      width: 200px;
+      height: 100px;
+      font-size: 18px;
+      padding-top: 50px;
+    }
+    &__Menu {
+      font-size: 13px;
+      display: grid;
+      margin: auto auto auto 3vw;
+      padding-bottom: 10px;
+      grid-template:
+        "one" 30px
+        "two" 30px
+        "three" 30px
+        "four" 30px /
+        auto;
     }
   }
 }
