--- a/src/components/Field/Ledge/Ledge.less
+++ b/src/components/Field/Ledge/Ledge.less
@@ -1,10 +1,15 @@
 .Ledge {
   text-align: center;
   width: 1000px;
-  height: 100px;
+  height: 50px;
   margin: auto;
   font-size: 20px;
-  margin-top: 20px;
   border-top: 1px solid black;
   color: rgb(46, 44, 44);
+}
+@media only screen and (max-width: 1040px) {
+  .Ledge {
+    width: 95vw;
+    margin: 10px;
+  }
 }
