--- a/src/components/index.less
+++ b/src/components/index.less
@@ -3,6 +3,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: "Outfit", sans-serif;
+  overflow-x: hidden;
 }
 a {
   color: black;
