to co je na webu

--- a/src/components/Field/Header/Header.less
+++ b/src/components/Field/Header/Header.less
@@ -101,3 +101,13 @@
     }
   }
 }
+@media only screen and (max-width: 380px) {
+  .Header {
+    &__Name {
+      width: 52vw;
+    }
+    &__Menu {
+      margin: auto auto auto 1vw;
+    }
+  }
+}
