--- a/src/components/index.less
+++ b/src/components/index.less
@@ -1,11 +1,24 @@
+html {
+  overflow-x: hidden;
+}
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Outfit", sans-serif;
-  overflow-x: hidden;
+  font-family: "Open Sans", sans-serif;
+  color: rgb(17, 17, 17);
+  overflow: hidden !important;
 }
 a {
   color: black;
   text-decoration: none;
+}
+@-ms-viewport {
+  width: device-width;
+}
+@media screen and (max-width: 441px) {
+  body,
+  html {
+    overflow-x: hidden !important;
+  }
 }
