--- a/src/components/Field/General/General.less
+++ b/src/components/Field/General/General.less
@@ -1,29 +1,49 @@
 .General,
 .Skills,
 .Other,
-.Estimates,
-.Contact {
+.Estimates {
   line-height: 1.8;
-  font-size: 26px;
   &__Content {
-    margin-top: 50px;
-    font-weight: 600;
+    margin-top: 20px;
+    font-size: 30px;
+    font-weight: bolder;
   }
+  p,
   li,
-  p {
-    font-size: 16px;
+  span {
+    font-size: 18px;
     font-weight: 200;
+  }
+  li {
+    &:hover {
+      font-weight: 700;
+    }
   }
   p {
     line-height: 1.3;
+  }
+  a {
+    color: rgb(41, 36, 36);
+    text-decoration: underline;
+  }
+  span {
+    margin-top: 10px;
+    &:hover {
+      font-weight: 600;
+      cursor: pointer;
+    }
+  }
+  &__Heading {
+    margin-top: 20px;
+    font-size: 22px;
+    font-weight: bolder;
   }
 }
 @media only screen and (max-width: 1040px) {
   .General,
   .Skills,
   .Other,
-  .Estimates,
-  .Contact {
+  .Estimates {
     width: 90vw;
     margin: 10px 5vw;
     word-break: break-word;
@@ -33,10 +53,12 @@
   .General,
   .Skills,
   .Other,
-  .Estimates,
-  .Contact {
+  .Estimates {
     width: 90vw;
     margin: 15px;
     word-break: break-word;
+    &__Logo {
+      margin-right: 5vw;
+    }
   }
 }
