--- a/src/components/Field/Ledge/Ledge.less
+++ b/src/components/Field/Ledge/Ledge.less
@@ -1,15 +1,12 @@
 .Ledge {
   text-align: center;
-  width: 1000px;
-  height: 50px;
-  margin: auto;
-  font-size: 20px;
+  width: 100%;
+  height: 30px;
+  font-size: 13px;
   border-top: 1px solid black;
   color: rgb(46, 44, 44);
-}
-@media only screen and (max-width: 1040px) {
-  .Ledge {
-    width: 95vw;
-    margin: 10px;
+  &__Name {
+    margin-top: 5px;
+    cursor: pointer;
   }
 }
